[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "haveibeenpwned-py"
dynamic = ["version"]
description = "Python client library for the Have I Been Pwned API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HaveIBeenPwned API Client Contributors"}
]
keywords = ["haveibeenpwned", "hibp", "security", "breach", "password", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.22.0",
    "coverage>=7.0.0",
    "black>=21.0",
    "flake8>=3.9",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.22.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/dynacylabs/haveibeenpwned"
Documentation = "https://github.com/dynacylabs/haveibeenpwned/blob/main/README.md"
Repository = "https://github.com/dynacylabs/haveibeenpwned"
Issues = "https://github.com/dynacylabs/haveibeenpwned/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=haveibeenpwned --cov-report=term-missing"

[tool.setuptools_scm]
write_to = "haveibeenpwned/_version.py"
